syntax = "proto3";

package syndicode_interface_v1;

// Acknowledges receipt and queuing of a player command.
message ActionInitResponse {
  // UUID generated on the client to match the response with the initial request.
  string request_uuid = 1;
}


// Enum for sorting direction
enum SortDirection {
  SORT_DIRECTION_UNSPECIFIED = 0;
  ASCENDING = 1;
  DESCENDING = 2;
}

/// The role assigned to a user account.
enum UserRole {
  /// Default unspecified role.
  USER_ROLE_UNSPECIFIED = 0;

  /// Admin role.
  ADMIN = 1;

  /// Standard player role.
  PLAYER = 2;
}

// Response message containing user details.
message GetUserResponse {
  // UUID of the user.
  string user_uuid = 1;

  // Name of the user.
  string user_name = 2;

  // Email address of the user.
  string email = 3;

  // Role of the user.
  syndicode_interface_v1.UserRole user_role = 4;

  // Status of the user account.
  string status = 5;
}
